Update and rename 2015-01-24.md to 2015-01-24-netflix.md

--- a/_posts/2015-01-24-netflix.md
+++ b/_posts/2015-01-24-netflix.md
@@ -23,5 +23,16 @@ Netflix 的电影推荐准确率提高了 10%。
 帝国。他们的背后，都有着大量的专业人才去支持公司的发展。
 
 ## 机遇
+另外，创业不是有强大的团队，就一定能成功。还要正好踩在合适的时间节点上。 Netflix 一开始做的业务是 DVD 邮递业务，那几年正好是
+DVD 销售不断攀升的时代。后来，他们又转向在线播放，同样是当时正在许多服务都向线上转移的时代背景下。公司的发展与时代的脉搏是
+紧密相连的。就像现在国内如日中天的小米，如果没有移动互联网飞速普及的时代背景，即使他们创业团队再强大，也很难像今天这样发展这么快。
+
+时代的机遇错失了，就再也没有了。甚至没有赶上时代的脚步，也会迅速衰落，就像书中那些经营电影租赁门店的大公司一样，即使以前再强大，因为没有随着时代发展及时转型，最终难逃破产的命运。
 
 ## 命运
+Netflix 当时强大的竞争对手百世达，那时已经是经营电影租赁门店的大公司。他们也及时进行了转型，甚至最后进行“并网”行动时，使得
+Netflix 无计可施，眼睁睁看着用户流失。但是因为百世达管理层出现动荡，换了新的领导人，而新领导人对线上业务不屑一顾，又开始发展
+已经衰落的门店业务。在大好形势下，将用户拱手送人。到今天，Netflix 已经是世界互联网市值排名前20的公司，不知道当年做出愚蠢决定
+的百世达高层做何感想。
+
+命运弄人，有时候什么都做好了，但也抵挡不住命运的洪流。
